--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -204,9 +204,12 @@ td {
 
 /* show user */
 .page-header {
-  height: 170px;
+  height: 200px;
   margin-top: 50px;
+  background-color: #ffdb4d;
+  border: solid #ffdb4d;
 }
+
 #info_fields {
   position: fixed !important;
   right: 100px;
@@ -364,3 +367,10 @@ body {
     margin-right: 0;
   }
 }
+
+.avatar-wrap {
+}
+.inner {
+  margin-left: 250px;
+}
+
