--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -23,7 +23,7 @@
     <div class="field">
       <%= f.label :avatar %>
       <% if current_user.avatar.url.present? %>
-        <%= cl_image_tag current_user.avatar_url :thumbnail %>
+        <%= cl_image_tag current_user.avatar_url, style: "width:100%" %>
         <%= f.label :remove_avatar do %>
           <%= f.check_box :remove_avatar, class: "form-control" %>
         <% end %>
