--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,45 +3,34 @@
     <div class="navbar-header">
       <%= link_to root_path do %>
         <%= image_tag "framgia2.png", class: "header-img" %>
-      <% end %>  
+      <% end %>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li>
-          <%= link_to t("static_pages.about"), about_path %>
-        </li>
         <% if user_signed_in? %>
-          <% if current_user.admin? %>
-            <li>
-              <%= link_to t("users.index"), admin_users_path %>
-            </li>
-            <li>
-              <%= link_to t("categories.index"), admin_categories_path %>
-            </li>
-            <li>
-              <%= link_to t("categories.new_category"), 
-                new_admin_category_path %>
-            </li>
-            <li>
-              <%= link_to t("words.index"), admin_words_path %>
-            </li>
-            <li>
-              <%= link_to t("words.new"), new_admin_word_path %>
-            </li>
-          <% else %>
-            <li>
-              <%= link_to t("users.index"), users_path %>
-            </li>          
-          <% end %>
           <li>
-            <%= link_to t("users.edit"), edit_user_registration_path %>
+            <%= link_to t("categories.category"), categories_path %>
           </li>
           <li>
-            <%= link_to t("users.show"), current_user %>
-          </li>          
+            <%= link_to t("word"), words_path %>
+          </li>
           <li>
-            <%= link_to t("users.logout"), destroy_user_session_path,
-              method: :delete %>
+            <%= link_to t("users.index"), users_path %>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= t :account %> <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to t(:profile), current_user %></li>
+              <li><%= link_to t(:setting),
+                edit_user_registration_path(current_user) %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to link_to t("users.logout"),
+                  destroy_user_session_path, method: :delete %>
+              </li>
+            </ul>
           </li>
         <% else %>
           <li>
