--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -17,7 +17,7 @@
 <div class="w3-row-padding">
   <% @categories.each do |category| %>
     <div class="w3-quarter w3-container w3-margin-bottom">
-      <%= cl_image_tag("category.jpg"), style: "width:100%" %>
+      <%= cl_image_tag "category.jpg", style: "width:100%" %>
       <div class="w3-container w3-white">
         <p><b><%= link_to category.name, category_path(category.id) %></b></p>
         <p><%= category.description %></p>
