--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
 <% if user_signed_in? %>
   <aside>
     <div class="col-md-8 home-content">
-      <h1><%= t :lesson %></h1>
+      <h1><%= t :recent_lesson %></h1>
       <table class="table table-bordered table-hover">
         <thead class="thead-default">
           <tr>
