--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -413,3 +413,11 @@ footer {
  {
   position: relative;
 }
+
+#follow {
+  font-size: 125%;
+  margin-left: 18px;
+}
+.social-share-button {
+  margin-top: 20px;
+}
