--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -205,10 +205,9 @@ td {
 
 /* show user */
 .page-header {
-  height: 200px;
+  height: 250px;
   margin-top: 50px;
-  background-color: #ffdb4d;
-  border: solid #ffdb4d;
+  background-color: white;
 }
 
 #info_fields {
