--- a/app/views/admin/categories/show.html.erb
+++ b/app/views/admin/categories/show.html.erb
@@ -1,10 +1,12 @@
 <% provide :title, @category.name %>
-<div class="col-sm-3">
+<div class="col-sm-2">
   <h1><%= @category.name %></h1>
-  <small><%= t "words.number" %>:<%= @category.words.count %></small>
-  <%= link_to t("words.new"), new_admin_word_path, class: "btn btn-success" %>
+  <h3><%= t "words.number" %>:<%= @category.words.count %></h3>
+  <div style="text-align:center">
+    <%= link_to t("words.new"), new_admin_word_path, class: "btn btn-success" %>
+  </div>
 </div>
-<div class="col-sm-9">
+<div class="col-sm-10">
   <h3><%= t "words.list" %></h3>
   <div class="search-form">
     <%= search_form_for @search, url: admin_category_path(@category) do |f| %>
@@ -17,7 +19,7 @@
         class: "btn btn-primary" %></div>
     <% end %>
   </div>
-  <table class="table table striped">
+  <table class="table table-bordered">
     <thead>
       <tr>
         <th><%= sort_link @search, :content, t("words.word") %></th>
