--- a/app/views/admin/categories/show.html.erb
+++ b/app/views/admin/categories/show.html.erb
@@ -3,7 +3,30 @@
   <h1><%= @category.name %></h1>
   <h3><%= t "words.number" %>:<%= @category.words.count %></h3>
   <div style="text-align:center">
-    <%= link_to t("words.new"), new_admin_word_path, class: "btn btn-success" %>
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">New Word</button>
+    <!-- Modal -->
+    <div id="myModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">New Word</h4>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div>
+               <%= render "word_form" %>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 <div class="col-sm-10">
